Actions
Bug #11416
closedTestEncodingConverter#test_newline_option fails under GC stress
Bug #11416:
TestEncodingConverter#test_newline_option fails under GC stress
Description
rb_econv_t::source_encoding_name and rb_econv_t::destination_encoding_name refer dangling pointers, after creation.
Updated by nobu (Nobuyoshi Nakada) over 10 years ago
- Status changed from Open to Closed
Applied in changeset r51488.
transcode.c: fix dangling pointers
- transcode.c (rb_econv_open0): rb_econv_t::source_encoding_name
and rb_econv_t::destination_encoding_name should refer static
strings always or NULL. [ruby-core:70247] [Bug #11416]
Updated by nagachika (Tomoyuki Chikanaga) over 10 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: REQUIRED to 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: DONE
r51488 and r51489 were backported into ruby_2_2 branch at r52784.
Updated by usa (Usaku NAKAMURA) over 10 years ago
- Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED, 2.2: DONE to 2.0.0: REQUIRED, 2.1: DONE, 2.2: DONE
ruby_2_1 r52798 merged revision(s) 51488,51489.
Actions