transcode.c: fix dangling pointers

* transcode.c (rb_econv_open0): rb_econv_t::source_encoding_name
  and rb_econv_t::destination_encoding_name should refer static
  strings always or NULL.  [ruby-core:70247] [Bug #11416]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@51488 b2dd03c8-39d4-4d8f-98ff-823fe69b080e